--- a/app/src/main/res/layout/police_request_row.xml
+++ b/app/src/main/res/layout/police_request_row.xml
@@ -11,11 +11,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:padding="20dp"
+        android:layout_marginBottom="20dp"
+        android:id="@+id/layoutview"
+        android:background="@drawable/button_background"
+        >
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="200dp"
@@ -39,8 +43,8 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="200dp"
@@ -64,8 +68,8 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="200dp"
@@ -90,8 +94,8 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="200dp"
@@ -99,7 +103,7 @@
                 android:layout_marginRight="10dp"
                 android:paddingLeft="10dp"
                 android:gravity="left"
-                android:text="Complaint category"
+                android:text="Number of patients"
                 android:textColor="#000000"
                 android:textSize="21dp" />
 
@@ -109,18 +113,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
                 android:gravity="left"
-                android:text="category"
+                android:text="patients"
                 android:textColor="#616161"
                 android:textSize="21dp" />
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <TextView
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:paddingLeft="10dp"
                 android:gravity="left"
@@ -131,10 +135,36 @@
             <TextView
                 android:id="@+id/tv4"
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
                 android:gravity="left"
                 android:text="description"
+                android:textColor="#616161"
+                android:textSize="21dp" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:paddingLeft="10dp"
+                android:gravity="left"
+                android:text="Status"
+                android:textColor="#000000"
+                android:textSize="21dp" />
+
+            <TextView
+                android:id="@+id/tv5"
+                android:layout_width="200dp"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:text="Status"
                 android:textColor="#616161"
                 android:textSize="21dp" />
 
