--- a/app/src/main/res/layout/pop3_window.xml
+++ b/app/src/main/res/layout/pop3_window.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pop_window_design"
     tools:context=".MainActivity">
 
 
@@ -12,7 +13,7 @@
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+         />
 
 
 
