--- a/app/src/main/res/layout/pop7_window.xml
+++ b/app/src/main/res/layout/pop7_window.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pop_window_design"
     tools:context=".MainActivity">
 
     <ListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+         />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
