--- a/app/src/main/res/layout/activity_police_ecomplain.xml
+++ b/app/src/main/res/layout/activity_police_ecomplain.xml
@@ -78,6 +78,8 @@
                         android:layout_height="wrap_content"
                         android:text="Your District"
                         android:layout_weight="2"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
@@ -112,6 +114,8 @@
                         android:layout_height="wrap_content"
                         android:text="Nearest Police Station"
                         android:layout_weight="2"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:padding="10dp"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
@@ -146,6 +150,8 @@
                         android:text="Complaint Category"
                         android:layout_weight="2"
                         android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <LinearLayout
@@ -178,6 +184,8 @@
                         android:text="Upload Evidence"
                         android:layout_weight="18"
                         android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
 
@@ -208,7 +216,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginBottom="30dp"
+                    android:layout_marginBottom="25dp"
                     android:layout_marginTop="10dp">
                     <TextView
                         android:layout_width="match_parent"
@@ -216,13 +224,15 @@
                         android:text="Special Notes"
                         android:layout_weight="2"
                         android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <EditText
                         android:id="@+id/note"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="18dp"
+                        android:layout_marginBottom="15dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginRight="10dp"
                         android:layout_marginLeft="10dp"
@@ -247,6 +257,8 @@
                         android:text="Your current location"
                         android:layout_weight="2"
                         android:padding="10dp"
+                        android:textSize="18sp"
+                        android:textColor="#455A64"
                         android:background="@drawable/rounded_edittext">
                     </TextView>
                     <TextView
@@ -289,28 +301,32 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:orientation="horizontal"
-                    android:layout_marginBottom="30dp"
+                    android:layout_marginBottom="25dp"
                     android:layout_marginTop="10dp">
 
                     <Button
-                        android:layout_width="wrap_content"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginRight="15dp"
+                        android:layout_weight="1"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#EEE82723"
                         android:padding="10dp"
-                        android:text="Request police support"
+                        android:text="Send Request"
+                        android:textSize="16sp"
                         android:textColor="#FFFFFF"
                         android:textStyle="bold"
                         android:onClick="requestPolice"/>
 
                     <Button
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_weight="1"
                         android:background="@drawable/rounded_edittext"
                         android:backgroundTint="#EEE82723"
                         android:onClick="cancecl_req"
                         android:text="Cancel"
+                        android:textSize="16sp"
                         android:textColor="#FFFFFF"
                         android:textStyle="bold">
 
