--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#388E3C</color>
-    <color name="colorBlack">#000</color>
+    <color name="colorBlack">#455A64</color>
 </resources>
