--- a/app/src/main/res/layout/activity_ambulance.xml
+++ b/app/src/main/res/layout/activity_ambulance.xml
@@ -309,6 +309,7 @@
                     android:layout_marginBottom="25dp"
                     android:layout_marginTop="10dp">
                     <Button
+                        android:id="@+id/requestAmbulance"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="15dp"
